[package]
name = "histo-graph-file"
version = "0.1.0"
authors = ["David Peklak <dpeklak@gmail.com>"]
edition = "2018"

[dependencies]
histo-graph-core = { path = "../core" }
bincode = "1.2"
ring = "0.16"
data-encoding = "2.2"
tokio = { version = "0.2", features = ["fs"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }

